--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Example</title>
+    <title>Material UI Dashboard</title>
     <script type="module" src="./src/index.tsx"></script>
   </head>
   <body></body>
